--- a/server/webroot/panel.html
+++ b/server/webroot/panel.html
@@ -15,7 +15,7 @@
 <div data-role="page" id="page1" data-position="fixed">
 	<a href="/list" title="main"><img src="/static/naver.gif" width="150"/></a>
 	<div data-role="header">
-		<h1>강명모</h1>
+		<h1>server</h1>
 	</div>
 	<div data-role="content">
 		<div data-role="collapsible">
@@ -144,7 +144,7 @@
 	</div>
 	
 	<div data-role="footer" data-position="fixed">
-		<h4>강명모</h4>
+		<h4>server</h4>
 	</div>
 </div>
 </body>
