--- a/server/webroot/panel.html
+++ b/server/webroot/panel.html
@@ -34,6 +34,10 @@
 			<h3>핑 및 쿠키</h3>
 			<p>
 			<div data-role="controlgroup" data-type="horizontal">
+				start(xxxx-xx-xx) : 
+				<input id ="logstart" />
+				end(xxxx-xx-xx) :
+				<input id ="logend" />
 				<button id="cookie_save"> cookie/localstorage SAVE </button>
 				<button id="button_pingtest"> Ping TEST </button>
 				<button id="button_sendwebsocketrpc"> Send WEBSOCKET(RPC) </button>
